Use bootstrapping formatter starting from Intellij 2022.2 (#798)
Use bootstrapping formatter starting from Intellij 2022.2